--- a/index.html
+++ b/index.html
@@ -15,11 +15,27 @@
 </head>
 
 <body>
-
-  
+  <div class="nav-container">
+    <section class="header-nav">
+      <h1>Fun Bus</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
+    </section>
+  </div>
+  <div class="nav-border"></div>
      
   <div class="container home">
-   
+   <header>
+    <div class="header-text">
+       <img src="img/fun-bus.jpg" alt="">
+       <h2>Welcome to Fun Bus!</h2>
+       <p>Traveling expedtion modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+     </div>
+   </header>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
